--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -11,13 +11,14 @@
         android:id="@+id/editTextChangeNewPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/editTextChangeOldPassword"
-        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
         android:background="@drawable/abc_popup_background_mtrl_mult"
         android:ems="10"
         android:hint="New Password"
         android:inputType="textPassword"
-        android:padding="16dp" />
+        android:padding="16dp"
+        android:layout_below="@+id/textView4"
+        android:layout_toEndOf="@+id/editTextChangeOldPassword" />
 
     <EditText
         android:id="@+id/editTextChangeConfirmNewPassword"
@@ -37,19 +38,12 @@
         style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/editTextChangeOldPassword"
+        android:visibility="invisible"
+        android:layout_above="@+id/buttonChangePassword"
         android:layout_centerHorizontal="true"
-        android:visibility="invisible" />
+        android:layout_marginBottom="110dp" />
 
     <!-- view for AdMob Banner Ad -->
-    <com.google.android.gms.ads.AdView
-        android:id="@+id/adView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        ads:adSize="BANNER"
-        ads:adUnitId="@string/banner_ad_unit_id" />
 
     <TextView
         android:id="@+id/textView4"
@@ -59,32 +53,33 @@
         android:padding="8dp"
         android:text="Change Password"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
         android:typeface="monospace"
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        android:layout_marginTop="36dp"
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/editTextChangeOldPassword" />
 
     <EditText
         android:id="@+id/editTextChangeOldPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView4"
+        android:layout_marginTop="22dp"
         android:background="@drawable/abc_popup_background_mtrl_mult"
         android:ems="10"
         android:hint="Old Password"
         android:inputType="textPassword"
         android:padding="16dp"
-        android:layout_below="@+id/textView4"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="22dp" />
+        android:visibility="gone" />
 
     <Button
         android:id="@+id/buttonChangePassword"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/accent_material_light"
         android:text="Save and Continue"
-        android:layout_above="@+id/adView"
-        android:layout_alignEnd="@+id/adView"
-        android:layout_alignStart="@+id/adView" />
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
