--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,11 @@
     <color name="divider">#b6b6b6</color>
     <color name="text_color">#FFFFFF</color>
     <color name="text_color_icon">#3d3535</color>
+    <color name="sinch_purple">#ff63029d</color>
+    <color name="off_white">#fffafafa</color>
+    <color name="dark_gray">#ffb3b3b3</color>
+    <color name="very_dark_gray">#636363</color>
+    <color name="background">#e9e3dd</color>
 
 
 </resources>
