--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,5 +8,8 @@
     <dimen name="fab_margin">16dp</dimen>
 
     <dimen name="connection_status_padding">8dp</dimen>
+    <dimen name="size_avatar_toolbar">40dp</dimen>
+    <dimen name="spacing_double">16dp</dimen>
+    <dimen name="elevation_header">4dp</dimen>
 
 </resources>
